[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/spritesheets/quado_posion_pod spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/kineamtics/enemies/quadro_pod/quadro_pod.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/enemy_hp_green_fill.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/enemy_hp_outline.png" type="Texture" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true)
	{
		new_color = white_color
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/active = false

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.177248, 0.33034, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 9.72481
height = 6.51093

[sub_resource type="CapsuleShape2D" id=10]
radius = 23.4865
height = 314.654

[node name="quadro_pod" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 32.1411, 115.923 )
texture = ExtResource( 1 )
offset = Vector2( -32.1411, -115.923 )
hframes = 20
frame = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )
anims/chase = SubResource( 4 )
anims/dead = SubResource( 5 )
anims/hurt = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/run = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.78583, 2.09563 )
shape = SubResource( 9 )

[node name="crosshair" type="Position2D" parent="."]
position = Vector2( -18, 0.281 )

[node name="detectFloor" type="RayCast2D" parent="."]
position = Vector2( -20, 0 )
scale = Vector2( 0.5, 0.4 )
enabled = true

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2( -0.33629, -6.34058 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="hpbar" type="TextureProgress" parent="."]
margin_left = -22.0
margin_top = -24.0
margin_right = 18.0
margin_bottom = -18.0
value = 100.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="playerDetectRayRight" type="RayCast2D" parent="."]
rotation = -1.5708
scale = Vector2( 1, 3 )
enabled = true

[node name="playerDetectRayLeft" type="RayCast2D" parent="."]
rotation = 1.5708
scale = Vector2( 1, 3 )
enabled = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0.078743, -28.5057 )

[connection signal="hurt" from="." to="." method="_on_quadro_pod_hurt"]
[connection signal="killed" from="." to="." method="_on_quadro_pod_killed"]
[connection signal="update_health" from="." to="." method="_on_quadro_pod_update_health"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
